--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/navigation_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_favourite" />
-
-    <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_search"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_search" />
+        android:title="@string/navigation_search" />
+
+    <item
+        android:id="@+id/navigation_searchHistory"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/navigation_searchHistory" />
 
 </menu>
