--- a/app/src/main/res/layout/list_stops.xml
+++ b/app/src/main/res/layout/list_stops.xml
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/first_time"
-        android:text="23:15"
+        android:text=""
         android:layout_marginTop="2dp"
         android:layout_marginLeft="4dp"
         android:layout_marginStart="34dp"
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/first_min"
-        android:text="14"
+        android:text=""
         android:gravity="right"
         android:layout_marginTop="2dp"
         android:layout_width="25dp"
@@ -83,7 +83,7 @@
 
     <TextView
         android:id="@+id/first_destination"
-        android:text="Kowloon Tong"
+        android:text=""
         android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -145,7 +145,7 @@
 
     <TextView
         android:id="@+id/second_destination"
-        android:text="Kowloon Tong"
+        android:text=""
         android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -205,7 +205,7 @@
 
     <TextView
         android:id="@+id/third_destination"
-        android:text="Kowloon Tong"
+        android:text=""
         android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
