--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -15,15 +15,16 @@
 
     <TextView
         android:id="@+id/Line"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="4dp"
+        android:textStyle="bold"
         android:gravity="center_vertical"
         android:layout_toEndOf="@+id/aMTSicon"
         android:layout_alignTop="@+id/aMTSicon"
         android:layout_alignBottom="@+id/aMTSicon"
-        android:text="Line"
+        android:text=""
         android:textSize="20sp" />
 
     <TextView
@@ -62,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/destinationTxt"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         android:textSize="20sp" />
 
 
@@ -76,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/min"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="0dp"
         android:textSize="12sp" />
 
     <TextView
