--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -4,12 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="100dp"
     tools:context=".RouteActivity">
+
+    <ImageView
+        android:id="@+id/companybg"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"    />
 
     <ImageView
         android:id="@+id/companyIcon"
         android:layout_width="60dp"
         android:layout_height="50dp"
+        android:padding="10dp"
+        android:adjustViewBounds="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
@@ -64,7 +75,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/destinationTxt"
+        app:layout_constraintTop_toBottomOf="@+id/companybg"
         android:transcriptMode="alwaysScroll"
         />
 
