--- a/app/src/main/res/layout/list_routes.xml
+++ b/app/src/main/res/layout/list_routes.xml
@@ -3,7 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="2dp">
+
+
+    <ImageView
+        android:id="@+id/aMTSbg"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:src="@drawable/listitem_mtr" />
 
     <ImageView
         android:id="@+id/aMTSicon"
@@ -11,6 +21,7 @@
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:padding="10dp"
         android:src="@drawable/mtr_logo" />
 
     <TextView
