--- a/app/src/main/res/menu/menu_stops.xml
+++ b/app/src/main/res/menu/menu_stops.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menuItemWelcome"
-        android:title="@string/test" />
+        android:id="@+id/add_favourite"
+        android:title="@string/contextMenu_addFavourite" />
     <item
         android:id="@+id/menuItemAbout"
         android:title="@string/test" />
