--- a/app/src/main/res/layout/startup.xml
+++ b/app/src/main/res/layout/startup.xml
@@ -3,9 +3,7 @@
 <!--
 startup.xml
 Welcome page is showed when app starting up.
-
 -->
-
 
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,15 +15,17 @@ Welcome page is showed when app starting up.
 
     <ImageView
         android:id="@+id/theme_startup"
-        android:layout_width="311dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/startup" />
+
+        android:background="@drawable/startup"/>
 
 </android.support.constraint.ConstraintLayout>
