--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -65,7 +65,7 @@
 
     <TextView
         android:id="@+id/min"
-        android:text="14"
+        android:text=""
         android:layout_marginTop="8dp"
         android:textStyle="bold"
         android:textColor="#007fff"
