--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="100dp"
+
     tools:context=".RouteActivity">
+
+    <ImageView
+        android:id="@+id/top_banna"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:src="@drawable/top_banna" />
 
     <ImageView
         android:id="@+id/companybg"
@@ -13,6 +23,7 @@
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        app:layout_constraintTop_toBottomOf="@+id/top_banna"
         android:adjustViewBounds="true"    />
 
     <ImageView
@@ -21,6 +32,7 @@
         android:layout_height="50dp"
         android:padding="10dp"
         android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@+id/top_banna"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
@@ -34,7 +46,8 @@
         android:layout_marginRight="4dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="Line"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_banna"
+
         android:textSize="20sp" />
 
 
@@ -70,7 +83,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="520dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
