--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/add_favourite"
-        android:title="@string/contextMenu_addFavourite" />
+        android:id="@+id/delete_favourite"
+        android:title="@string/contextMenu_deleteFavourite" />
 </menu>
