--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,4 +15,15 @@
         android:layout_marginTop="8dp"
     />
 
+    <TextView
+        android:id="@+id/emptyView"
+        android:text="@string/favourite_no_route"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="#7b00ff"
+        android:textSize="34sp"
+        android:visibility="gone"
+        />
+
 </FrameLayout>
