--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,14 +15,12 @@
         android:layout_marginTop="8dp"
     />
 
-    <TextView
+    <ImageView
         android:id="@+id/emptyView"
-        android:text="@string/favourite_no_route"
+        android:src="@drawable/nofavdata"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#7b00ff"
-        android:textSize="34sp"
         android:visibility="gone"
         />
 
